--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend": "cd ../client && cd ./frontend && pnpm dev",
+    "frontend": "cd ../client && cd ./frontend && yarn dev",
     "backend": "nodemon",
-    "dev": "concurrently \"pnpm run frontend\" \"pnpm run backend\""
+    "dev": "concurrently \"yarn run frontend\" \"yarn run backend\""
   },
   "nodemonConfig": {
     "watch": [
